# frogl

./: .gitignore  CMakeLists.txt  README.md  build.gradle  main.cpp  settings.gradle
specification/: fvm determination.md
src/: fvm.cpp  fvm.h  stack.cpp  stack.h
src/bytecode/: builder.cpp  builder.h  instruction.h
src/froglm/: compiler.cpp  compiler.h  node.h  type.h
